filter by exoplanet mass and radius added in apis
