# models/filters/exoplanets.go
@@ -1,0 +1,6 @@
+package filters
+
+type ExoplanetFilter struct {
+	Radius float64
+	Mass   float64
+}
